test/2/parse/bare-semicolon.err
parse error: test/2/parse/bare-semicolon.ploy:1:1-2: unexpected terminator token: `;`
  ;
  ~
